src/k8s/deployment-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: webapp
  name: webapp
spec:
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
        - name: webapp
          image: uqlutzavr/final-webapp:v.0.1.12417241674
          resources:
          ports:
            - containerPort: 5000
