src/k8s/test-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: webapp
  name: webapp
spec:
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - name: webapp
        image: nginx
        resources:
        ports:
        - containerPort: 5000
