src/k8s/loadbalancer-app.yml
apiVersion: v1
kind: Service
metadata:
  name: webapp
  namespace: webapp
spec:
  selector:
    app: webapp
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 5000
